@@ -1,4 +1,5 @@
-@comment $NetBSD: PLIST,v 1.3 2004/04/23 22:07:55 reed Exp $
+@comment $NetBSD: PLIST,v 1.4 2004/10/29 12:56:24 abs Exp $
 bin/setiathome
 bin/xsetiathome
 man/cat1/setiathome.0
+man/cat1/xsetiathome.0
